<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (C) 2014 Klinker Apps, Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>

    <string name="app_name">Theme Spotlight</string>

    <!-- Navigation drawer options -->
    <string name="evolve_sms_themes">EvolveSMS Themes</string>
    <string name="talon_themes">Talon Themes</string>
    <string name="featured_themers">Featured Themers</string>
    <string name="settings">Settings</string>
    <string name="send_feedback">Send Feedback</string>

    <!-- Preference Strings -->
    <string name="about">About</string>
    <string name="version_number">Version Number: %s</string>
    <string name="open_source">View Source Code</string>
    <string name="open_source_summary">Themers can also go here and add themselves to the \"Featured Themers\" section
        to gain better visibility for their themes!
    </string>
    <string name="changelog">Changelog</string>
    <string name="free_only">Free Themes</string>
    <string name="free_only_summary">Only free themes will be shown when browsing</string>

    <!-- Error strings -->
    <string name="error_no_accounts">No Google Accounts</string>
    <string name="error_no_accounts_summary">No accounts on device to log in to. We can\'t do anything.</string>
    <string name="ok">OK</string>

    <!-- Theme Selected strings -->
    <string name="select_a_theme">Select an item!</string>
    <string name="download">Download</string>
    <string name="view_source">View Source Code</string>
    <string name="apply">Apply?</string>
    <string name="installed">Installed</string>
    <string name="loading">Loading&#8230;</string>
    <string name="theme_set">Theme Applied!</string>
    <string name="not_a_theme">Not a theme!</string>

    <!-- Search -->
    <string name="search">Search</string>

    <!-- Google Auth information -->
    <string name="google_auth">Google Authorization</string>
    <string name="google_auth_summary">To use the Theme Spotlight, we are going to pull results from the Play Store and
        display them to you in the list of themes. To do this, you first need to allow the app to be authorized
        by your Google account, which is what the following screen will request.\n\nIf you say no to this request,
        you won\'t be able to see any of the themes, which would be a major bummer! Loading these search results is the
        only thing that the Theme Spotlight will do with this authorization, no worries.</string>

</resources>