<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (C) 2014 Klinker Apps, Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
            android:key="@string/free_only_key"
            android:title="@string/free_only"
            android:summary="@string/free_only_summary"
            android:defaultValue="false"/>

    <Preference
            android:key="preference_get_featured"
            android:title="@string/open_source"
            android:summary="@string/open_source_summary">

        <intent android:action="android.intent.action.VIEW"
                android:data="https://github.com/klinker41/theme-spotlight"/>
    </Preference>

    <Preference
            android:key="preference_about"
            android:title="@string/about"
            android:summary="@string/version_number"/>

</PreferenceScreen>